# Fastapi_test

./: .dockerignore  AGENTS.md  Dockerfile  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
tests/: conftest.py  test_app.py
